Fix cursor trail positioning to align with cursor center

--- a/my super cool bf/style.css
+++ b/my super cool bf/style.css
@@ -226,6 +226,8 @@ h1 {
   pointer-events: none;
   z-index: 999999;
   transform: translate(-50%, -50%);
+  left: -4px;
+  top: -4px;
 }
 
 #cursor::after {
@@ -234,9 +236,11 @@ h1 {
   width: 1px;
   height: 1px;
   transform: scale(6);
-  transform-origin: top left;
+  transform-origin: center;
   z-index: 999999;
   pointer-events: none;
+  left: 7px;
+  top: 7px;
   box-shadow: 
     5px 3px #f4b4da,
     5px 4px #f98ccc,
@@ -296,6 +300,8 @@ h1 {
     0 0 20px #ffffff;
   animation: fadeOut 0.8s forwards;
   transform: translate(-50%, -50%);
+  margin-left: -4px;
+  margin-top: -4px;
 }
 
 @keyframes fadeOut {
